Implement sending messages with emojis
