# whatsappclone/src/main/java/com/hamidou/whatsappclone/message/MessageController.java
@@ -42,7 +42,7 @@ public class MessageController {
     }
 
     @GetMapping("/chat/{chat-id}")
-    public ResponseEntity<List<MessageResponse>> findChatMessages(@PathVariable("chat-id") String chatId) {
+    public ResponseEntity<List<MessageResponse>> getMessages(@PathVariable("chat-id") String chatId) {
         return ResponseEntity.ok(messageService.findChatMessages(chatId));
     }
 
